Fixed some bugs added admin and user roles support